sonar integrating with pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <sonar.host.url>http://54.152.205.68:9000</sonar.host.url>
-        <sonar.organization>cloudbinaryio</sonar.organization>
-        <sonar.projectKey>cloudbinaryio</sonar.projectKey>
-        <sonar.login>sqp_ee60244f58bb57abe4bccfbcf177a686037bf14a</sonar.login>
+        <sonar.host.url>http://13.201.23.210:9000</sonar.host.url>
+        <sonar.organization>Saiproject</sonar.organization>
+        <sonar.projectKey>Saiproject</sonar.projectKey>
+        <sonar.login>sqp_143453be4506dfd217b498619f099bd74a1c7d2e</sonar.login>
 
 
     </properties>
